# coreml-diffusion-benchmarks

./: .gitignore  AGENTS.md  BENCHMARK_SPEC.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF_VAE_CLIP_E2E.md  IMAGE_ABLATION_SPEC.md  README.md  ablation_e2e.py  hatch_build.py  pyproject.toml
artifacts/apple_coreml/original_gpu/: .source.json  conversion-timings.json  local_sd15-ORIGINAL-CPU_AND_GPU-conversion.json
artifacts/apple_coreml/split_einsum_v2_ane/: .source.json  conversion-timings.json  local_sd15-SPLIT_EINSUM_V2-CPU_AND_NE-conversion.json
artifacts/coreml_diffusion/original_gpu/: .source.json  conversion-timings.json  local_sd15-ORIGINAL-CPU_AND_GPU-fp16-conversion.json
artifacts/coreml_diffusion/split_einsum_v2_ane/: .source.json  conversion-timings.json  local_sd15-SPLIT_EINSUM_V2-CPU_AND_NE-fp16-conversion.json
artifacts/coreml_diffusion/split_einsum_v2_ane_w4/: .source.json  conversion-timings.json
config/: disk_footprint.yaml  matrix.yaml
envs/apple-ct8/: pyproject.toml
envs/team-ct9/: pyproject.toml
results/data/: apple-ane-fp16.jsonl  apple-gpu-fp16.jsonl  diffusers-mps-fp16.jsonl  environment.json  mlx-gpu-fp16.jsonl  ours-ane-fp16.jsonl  ours-gpu-fp16.jsonl  provenance.json  results.jsonl
results/tables/: conversion_time.md  latency.md  power_energy.md  size_quantization.md
scripts/: run.sh
scripts/convert/: apple_ct8.py  team_ct9.py
src/sdbench/: __init__.py  _build_info.py  adapter.py  aggregate.py  cli.py  config.py  conversion.py  env.py  equivalence.py  inputs.py  orchestrator.py  power.py  progress.py  provenance.py  report.py  results.py  sizing.py  telemetry.py  thermal.py  timing.py
src/sdbench/backends/: __init__.py  apple_coreml.py  coreml_diffusion.py  diffusers_mps.py  mlx_backend.py  mlx_unet.py  registry.py
src/sdbench/data/: matrix.yaml
src/sdbench/data/envs/apple-ct8/: pyproject.toml
src/sdbench/data/envs/team-ct9/: pyproject.toml
src/sdbench/data/scripts/convert/: apple_ct8.py  team_ct9.py
src/sdbench/tui/: __init__.py  app.py  capabilities.py  cleanup.py  config_cmd.py  config_view.py  console.py  convert_orchestrator.py  dashboard.py  download.py  power_session.py  preflight.py  prompts.py  run_cmd.py  run_view.py  runplan.py  runtime.py  screen.py  sizing_probe.py  workspace.py
tests/: test_aggregate.py  test_apple_coreml_adapter.py  test_apple_ct8_conversion_script.py  test_cleanup.py  test_cli_registry.py  test_config.py  test_coreml_diffusion_adapter.py  test_diffusers_mps_adapter.py  test_environment_manifest.py  test_inputs.py  test_mlx_backend.py  test_orchestrator.py  test_phase5_pipeline.py  test_phase6_app.py  test_power_env_check.py  test_power_pipeline.py  test_power_session_cli.py  test_power_sizing_results.py  test_prompts_matrix.py  test_provenance.py  test_quiescent_host.py  test_report_bundling.py  test_review_fixes.py  test_run_flow.py  test_run_wrapper.py  test_team_ct9_conversion_script.py  test_telemetry.py  test_timing_equivalence.py  test_tui_config.py  test_tui_presets.py  test_tui_screens.py
