[project]
name = "coreml-diffusion-benchmarks"
version = "0.1.0"
description = "Stable Diffusion 1.5 UNet cross-backend benchmark harness"
readme = "README.md"
requires-python = ">=3.12,<3.13"
# Lean core: enough for the interactive front-end (config / cleanup / guided menu)
# and to keep `uv tool install` / uvx fast. The heavy benchmark stack lives in the
# `bench` extra and is pulled on first real run.
dependencies = [
  "click==8.1.8",
  "numpy==2.1.3",
  "pyyaml==6.0.2",
  "questionary==2.0.1",
  "readchar>=4.2.2",
  "rich==13.9.4",
  "typer==0.15.1",
]

[project.optional-dependencies]
# Heavy runtime, required to convert and run benchmarks (not for the menu itself).
# Consumers: `uv tool install 'coreml-diffusion-benchmarks[bench]'`.
bench = [
  "coremltools==8.3.0",
  "diffusers==0.32.2",
  "mlx>=0.31.2",
  "psutil==6.1.1",
  "pydantic==2.10.6",
  "safetensors==0.5.3",
  "torch==2.6.0",
  "transformers==4.49.0",
]

[dependency-groups]
dev = ["pytest==8.3.4"]
# Installed by default for development (see tool.uv.default-groups) so `uv sync`
# keeps provisioning the full stack; mirrors the `bench` extra for consumers.
bench = [
  "coremltools==8.3.0",
  "diffusers==0.32.2",
  "mlx>=0.31.2",
  "psutil==6.1.1",
  "pydantic==2.10.6",
  "safetensors==0.5.3",
  "torch==2.6.0",
  "transformers==4.49.0",
]

[tool.uv]
default-groups = ["dev", "bench"]

[project.scripts]
sdbench = "sdbench.cli:app"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
