[project]
name = "coreml-diffusion-benchmarks"
version = "0.1.0"
description = "Stable Diffusion 1.5 UNet cross-backend benchmark harness"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adrian Szczepański", email = "hi@aszc.dev" }]
requires-python = ">=3.12,<3.13"
# Single install: `uv tool install coreml-diffusion-benchmarks` provisions the
# full benchmark stack. There is no light-only mode — every meaningful flow
# (convert, run, prepare-input, download) needs torch + coremltools + diffusers,
# so splitting the install only confused contributors who saw a menu but
# couldn't actually run anything.
dependencies = [
  "click==8.1.8",
  "coremltools==8.3.0",
  "diffusers==0.32.2",
  "mlx>=0.31.2",
  "numpy==2.1.3",
  "psutil==6.1.1",
  "pydantic==2.10.6",
  "pyyaml==6.0.2",
  "questionary==2.0.1",
  "readchar>=4.2.2",
  "rich==13.9.4",
  "safetensors==0.5.3",
  "torch==2.6.0",
  "transformers==4.49.0",
  "typer==0.15.1",
]

[dependency-groups]
dev = ["pytest==8.3.4"]

[project.scripts]
# `cdbench` is the primary entry point — "CoreML Diffusion bench". After
# `uv tool install coreml-diffusion-benchmarks` run `cdbench` (or `uv run cdbench`)
# with no subcommand to get the guided full-screen flow.
cdbench = "sdbench.cli:app"
# Legacy alias kept so existing scripts (scripts/run.sh, CI, contributor docs
# predating the rebrand) keep working without modification.
sdbench = "sdbench.cli:app"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdbench"]

# Bundle the canonical matrix, the two CoreML conversion drivers, and the
# pinned-isolated-env definitions (ct8 + ct9) into the wheel as packaged
# resources. The bootstrap in `sdbench.config` materialises them into a
# fresh workspace tree (`<cwd>/config/`, `<cwd>/scripts/convert/`,
# `<cwd>/envs/`) on first run so a contributor who installs the tool via
# `uv tool install` — no repo checkout — gets a working benchmark without
# copying files manually.
[tool.hatch.build.targets.wheel.force-include]
"config/matrix.yaml" = "sdbench/data/matrix.yaml"
"scripts/convert/apple_ct8.py" = "sdbench/data/scripts/convert/apple_ct8.py"
"scripts/convert/team_ct9.py" = "sdbench/data/scripts/convert/team_ct9.py"
"envs/apple-ct8/pyproject.toml" = "sdbench/data/envs/apple-ct8/pyproject.toml"
"envs/apple-ct8/uv.lock" = "sdbench/data/envs/apple-ct8/uv.lock"
"envs/team-ct9/pyproject.toml" = "sdbench/data/envs/team-ct9/pyproject.toml"
"envs/team-ct9/uv.lock" = "sdbench/data/envs/team-ct9/uv.lock"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
